tests/e2e/unary_not_if.error
Error: syntax error in story at line 2, column 4

2|    if not b
         ^^^

E0030: `not` is reserved for future use
